fix: improve vertical alignment

--- a/src/hyperblock/style.scss
+++ b/src/hyperblock/style.scss
@@ -17,9 +17,8 @@
 
 .hyperblock__container {
   position: relative;
-  width: 400px;
-  height: 300px;
-  background: red;
+  width: 560px;
+  height: 100px;
   display: block;
 
   > * {
