--- a/src/hyperchild/editor.scss
+++ b/src/hyperchild/editor.scss
@@ -7,6 +7,7 @@
 
 .wp-block-hyper-hyperchild  {
   pointer-events: auto;
+  margin-top: -30px;
 }
 
 [data-type="hyper/hyperchild"] {
