--- a/src/hyperchild/style.scss
+++ b/src/hyperchild/style.scss
@@ -8,5 +8,5 @@
   margin: 0;
   padding: 0;
   height: auto;
-  width: 400px;
+  width: 560px;
 }
